--- a/www/css/style.css
+++ b/www/css/style.css
@@ -262,6 +262,7 @@ main .container form div{
     flex-direction: column;
     margin: 0px;
     padding:20px;   
+    background-color: yellow;
     border:1px solid goldenrod;
     width: 500px;
 }
